--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,27 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Log in to Docker Hub
-        run: |
-          docker login -u patelharsh4304 -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        uses: docker/login-action@v3
+        with:
+          username: patelharsh4304
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+        # run: |
+        #   docker login -u patelharsh4304 -p ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and Push Docker Image
-        run: |
-          docker build -t patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app:latest .
-          docker push patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app:latest
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{patelharsh4304}}/{testdocker_ci_cd_pipeline}:${{ github.sha }}
+            ${{patelharsh4304}}/{testdocker_ci_cd_pipeline}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ github.repository }}:latest
+        # run: |
+        #   docker build -t patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app .
+        #   docker push patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app
 
   deploy:
     runs-on: ubuntu-latest
