--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: patelharsh4304
+          username: harsh43431101@gmail.com
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
         # run: |
         #   docker login -u patelharsh4304 -p ${{ secrets.DOCKER_HUB_TOKEN }}
@@ -39,8 +39,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{patelharsh4304}}/{testdocker_ci_cd_pipeline}:${{ github.sha }}
-            ${{patelharsh4304}}/{testdocker_ci_cd_pipeline}:latest
+            ${{harsh43431101@gmail.com}}/{testdocker_ci_cd_pipeline}:${{ github.sha }}
+            ${{harsh43431101@gmail.com}}/{testdocker_ci_cd_pipeline}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
             ghcr.io/${{ github.repository }}:latest
         # run: |
