--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,75 +4,81 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          node-version: 18
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: harsh43431101@gmail.com
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-        # run: |
-        #   docker login -u patelharsh4304 -p ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: Install Dependencies
+        run: npm install
 
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{harsh43431101@gmail.com}}/{testdocker_ci_cd_pipeline}:${{ github.sha }}
-            ${{harsh43431101@gmail.com}}/{testdocker_ci_cd_pipeline}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
-            ghcr.io/${{ github.repository }}:latest
-        # run: |
-        #   docker build -t patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app .
-        #   docker push patelharsh4304/testdocker_ci_cd_pipeline:funning-nextjs-app
+      - name: Run Tests
+        run: npm run test
 
-  deploy:
+      - name: Build App
+        run: npm run build
+
+  dockerize:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Deploy to server
-        run: |
-          ssh user@your-server "
-            # Stop and remove old container if it exists
-            docker ps -q --filter 'ancestor=funning-nextjs-app' | xargs -r docker stop | xargs -r docker rm;
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/nextjs-app:latest
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+
+  #     - name: Deploy to server
+  #       run: |
+  #         ssh user@your-server "
+  #           # Stop and remove old container if it exists
+  #           docker ps -q --filter 'ancestor=funning-nextjs-app' | xargs -r docker stop | xargs -r docker rm;
             
-            # Remove old image locally to free space
-            docker images 'funning-nextjs-app' -q | xargs -r docker rmi;
+  #           # Remove old image locally to free space
+  #           docker images 'funning-nextjs-app' -q | xargs -r docker rmi;
             
-            # Pull new image and run new container
-            docker pull funning-nextjs-app:$GITHUB_SHA;
-            docker run -d --name funning-nextjs-app-container funning-nextjs-app:$GITHUB_SHA
-          "
+  #           # Pull new image and run new container
+  #           docker pull funning-nextjs-app:$GITHUB_SHA;
+  #           docker run -d --name funning-nextjs-app-container funning-nextjs-app:$GITHUB_SHA
+  #         "
           
-      - name: Remove old image from Docker Hub (optional)
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          # List all images and delete old ones from Docker Hub
-          # Here you should customize logic to identify old images based on your tagging scheme
-          # Example: Deleting images older than the current image
-          docker image ls --filter 'dangling=true' -q | xargs -r docker rmi
+  #     - name: Remove old image from Docker Hub (optional)
+  #       run: |
+  #         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  #         # List all images and delete old ones from Docker Hub
+  #         # Here you should customize logic to identify old images based on your tagging scheme
+  #         # Example: Deleting images older than the current image
+  #         docker image ls --filter 'dangling=true' -q | xargs -r docker rmi
