--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
   dockerize:
-    name: Build and Push Docker Image
+    name: Build Docker Image Locally and Push to Docker Hub
     runs-on: ubuntu-latest
     needs: build
 
@@ -37,18 +37,33 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Build Docker Image Locally
+        run: |
+          docker build -t funning-nextjs-app:local .
+
+      - name: Run Docker Image Locally
+        run: |
+          docker run -d --name funning-nextjs-app-container -p 3000:3000 funning-nextjs-app:local
+          docker ps
+
+      - name: Stop and Remove Local Container
+        run: |
+          docker stop funning-nextjs-app-container
+          # docker rm funning-nextjs-app-container
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build and Push Docker Image
+      - name: Push Docker Image to Docker Hub
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/nextjs-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/funning-nextjs-app:latest
+
 
   # deploy:
   #   runs-on: ubuntu-latest
